# 3DSemanticMapping_JINT_2020

./: .gitignore  .gitmodules  LICENSE  README.md  readme.md  rviz_config.rviz
auto/: CMakeLists.txt  package.xml  rviz_config.rviz
auto/include/: Projector.h
auto/launch/: demo.launch  full_start.launch  initialize.launch  obj_positioner.launch  obj_positioner_rtab.launch  quick_start.launch  robot_description.launch  slam_nav.launch  yolo_detector.launch  yolo_detector_7th.launch  yolo_detector_rtab.launch
auto/launch/include/: gmapping.launch.xml  move_base.launch.xml
auto/launch/sensor/: eth_laser.launch  scan_hokuyo.launch  usb_laser.launch
auto/param/: costmap_common_modified.yaml  local_costmap_params.yaml  object_positioner.yaml  object_positioner_astra.yaml  object_positioner_rtab.yaml
auto/src/: .autonomous.py.swp  Projector.cpp  filter.py  filtered_instances.py  image_publisher.py  object_marker.py  object_projector.cpp  projector.cpp  projector.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ObjectList.msg  WorldObject.msg
custom_msgs/srv/: ClearLaser.srv
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: file.yaml  ros.yaml  yolo-door.yaml  yolo-voc-door.yaml  yolo.2.0.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolo-door.cfg  yolo-voc-door.cfg
datasets/dataset-7th_floor/: acml_play.sh  play.sh  slam_play.sh
datasets/dataset-7th_floor/files/: acml_demo.launch  robot_desc.launch
datasets/dataset-kinect2/: amcl-play-denoised.sh  change.py  play-bag-denoised.sh
datasets/dataset-kinect2/files/: amcl.sh  publish_pointcloud_denoised.launch  robot_desc.launch  rtabmap.launch.backup
datasets/sequence3-kinect/: amcl-play.sh  play-bag.sh
datasets/sequence3-kinect/files/: amcl_demo.launch  image_decompresser.launch  map.yaml  publish_pointcloud.launch  rtabmap.launch  slam-rtab.sh
docs/: INSTALL_CUDNN.md  INSTALL_MELODIC.md  INSTALL_ROS.md
driver_common/driver_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
driver_common/driver_base/include/driver_base/: driver.h  driver_node.h
driver_common/driver_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
driver_common/timestamp_tools/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
driver_common/timestamp_tools/include/timestamp_tools/: periodic_timestamp_min_filter.h  trigger_matcher.h
driver_common/timestamp_tools/test/: test_trigger_matcher.cpp
hokuyo_node/: CMakeLists.txt
hokuyo_node/cfg/: Hokuyo.cfg
hokuyo_node/src/: hokuyo.cpp
launch/: initialize.launch
launch/include/: gmapping.launch.xml
launch/sensor/: scan_camera.launch
navigation/costmap_2d/include/costmap_2d/: costmap_2d.h
param/: costmap_common_params.yaml
pcl_tutorial/: CMakeLists.txt  package.xml
pcl_tutorial/src/: code.cpp
src/: map_interceptor.py  object_counter.py  object_projector.py
taking_pictures/: CMakeLists.txt  package.xml
taking_pictures/src/: get_distance.py  save_image.py  save_state.py
tools/downsampling_publish/: CMakeLists.txt  package.xml
tools/downsampling_publish/config/: topics.yaml
tools/downsampling_publish/launch/: downsampling_publish.launch  save_imagesFromBag.launch
tools/downsampling_publish/src/: downsampling_publish.py
tools/image_denoising/: CMakeLists.txt  package.xml
tools/image_denoising/launch/: image_denoising.launch
tools/image_denoising/src/: image_denoising.py
tools/parameter_config_sequences/dataset_7th_floor/: obj_positioner_7th.launch
tools/parameter_config_sequences/dataset_7th_floor/files/: map_7th_floor.pgm  map_7th_floor.yaml
tools/parameter_config_sequences/dataset_denoised/: play-bag.sh  rtab-play.sh  yolo_detector.launch
tools/parameter_config_sequences/dataset_denoised/files/: publish_pointcloud.launch  robot_desc.launch
tools/parameter_config_sequences/dataset_rtab/: play-bag.sh  yolo_detector_rtab.launch
tools/parameter_config_sequences/dataset_rtab/files/: publish_pointcloud.launch  uncompress_demo_rtab.launch
